@@ -1,3 +1,8 @@
+2012-??-??  Francois Vogel  <fvogelnew1@free.fr>
+
+	* generic/tkText.c: [Bug-3021557]: Moving the cursor in
+	* tests/text.test:  elided text freezes Tk
+
 2011-11-22  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* doc/wish.1: Use the same shebang comment everywhere.
